<resources>
    <string name="app_name">Messenger</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="submit">Submit</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_new_account">Create new account</string>
    <string name="gender">Gender</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="char_x_not_allowed">Character \'%s\' is not allowed.</string>
    <string name="incorrect_password_length">Password must be 6 to 20 characters long.</string>
    <string name="incorrect_date_of_birth">Select correct date of birth.</string>
    <string name="field_may_not_be_empty">This field may not be empty.</string>
    <string name="name_field_too_big">Max length is 30 characters.</string>
    <string name="incorrect_username_length">Username must be 3 to 20 characters long.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="register_date">Register date</string>
    <string name="search">Search</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="show_information">Profile</string>
    <string name="delete_chat_history">Delete history</string>
    <string name="add_people_to_chat">Add people to chat</string>
    <string name="change_chat_title">Change chat title</string>
    <string name="leave_chat">Leave chat</string>
    <string name="new_members">New members:</string>
    <string name="chat_members">Chat members:</string>
    <string name="create_new_chat">Create new chat</string>
    <string name="save">Save</string>
    <string name="add_members_to_chat_x">Add members to %s</string>
    <string name="search_hint">Search people</string>
    <string name="chat_title">Chat title</string>
    <string name="nameless">Nameless</string>
    <string name="filter">Filter</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="no_contacts_to_display">You don\'t have any contacts</string>
    <string name="no_dialogues_to_display">No dialogues to display</string>
    <string name="max_age">Max age</string>
    <string name="min_age">Min age</string>
    <string name="all_contacts_in_chat_already">All contacts in chat already</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_image_source">Select image source</string>
    <string name="image_crop_activity_title">Crop image</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="confirm_leave_chat">Leave chat?</string>
    <string name="colfirm_delete_history">Delete history?</string>
    <string name="confirm_delete_history">Delete history?</string>
    <string name="delete_contact">Delete contact</string>
    <string name="unknown">Unknown</string>
    <string name="chat_exists">Chat exists</string>
    <string name="chat_exists_create_anyway">Chat whith selected members already exists. Continue anyway?</string>
    <string name="name_too_small">Min length is 2 characters</string>
    <string name="not_selected">Not selected</string>
    <string name="any">Any</string>
    <string name="kick_from_chat">Kick</string>
    <string name="please_wait">Please wait</string>
    <string name="creating_account">Creating your account</string>
    <string name="logging_in">Logging in</string>
    <string name="internet_not_available">No internet connection</string>
    <string name="show_connection">Show connection</string>
    <string name="error">Error</string>
    <string name="enter_chat_title">Enter chat title</string>
    <string name="title">Title</string>
    <string name="nothing_found">Nothing found</string>
    <string name="new_message">New message</string>
    <string name="invited_to_chat">You invited to new chat</string>
    <string name="open_existing_chat">Open chat</string>
    <string name="connection_length">Connection length</string>
    <string name="no_connecton">No connection</string>
    <string name="user_x_is_typing">%s is typing message...</string>
</resources>
