<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_min_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_min_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/min_age"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_max_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_max_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/max_age"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">
        <TextView
            style="@style/DarkHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/gender"/>
        <Spinner
            android:id="@+id/sp_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:popupBackground="@color/white"/>
    </LinearLayout>


</LinearLayout>