<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/fragment_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/profile_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="16dp"
                    android:src="@mipmap/ic_default_profile"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/tv_username_hint"
                            style="@style/LightHint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"/>
                        <TextView
                            android:id="@+id/tv_username"
                            style="@style/LightInput"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="MyUsername123"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/LightHint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_date"/>
                        <TextView
                            android:id="@+id/tv_register_date"
                            style="@style/LightInput"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="01.01.2017"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">
                    <TextView
                        style="@style/DarkHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"/>
                    <TextView
                        android:id="@+id/tv_first_name"
                        style="@style/DarkInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FirstName"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">
                    <TextView
                        style="@style/DarkHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"/>
                    <TextView
                        android:id="@+id/tv_last_name"
                        style="@style/DarkInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LastName"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">
                    <TextView
                        style="@style/DarkHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth"/>
                    <TextView
                        android:id="@+id/tv_date_of_birth"
                        style="@style/DarkInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="01.01.2000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="@style/DarkHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"/>
                    <Spinner
                        android:id="@+id/sp_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:popupBackground="@color/white"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</ScrollView>
